# sunday

./: .gitignore  .vercelignore  PLAN.md  README.md  calendar_manager.py  config.env.example  config.py  email_parser.py  gmail_watcher.py  google_auth.py  llm_client.py  location_state.py  main.py  messenger.py  pipeline.py  pyproject.toml  server.py  state_store.py  travel_estimator.py  vercel.json
backend/: action_center_store.py  agent.py  app_settings.py  calendar_manager.py  config.py  contacts_store.py  email_parser.py  gmail_watcher.py  llm_client.py  main.py  messenger.py  pipeline.py  server.py  title_generation.py  transcript_agent.py  transcription.py
smart-calendar/: .gitignore  README.md  calendar_manager.py  config.py  day_planner.py  email_parser.py  errors.py  gmail_watcher.py  llm_client.py  main.py  server.py
smart-calendar/tests/: test_email_parser.py  test_messenger.py  test_pipeline.py  test_travel_estimator.py
sunday-app/: .env.example  App.tsx  app.json  eas.json  package-lock.json  package.json
sunday-app/src/: api.ts  config.ts  types.ts
sunday-app/src/components/: CountdownTimer.tsx  EmptyState.tsx  ErrorBanner.tsx  EventCard.tsx  LocationPickerModal.tsx  NavIcons.tsx  PageCoachOverlay.tsx  (+2 more)
tests/: conftest.py  test_app_settings.py  test_calendar_manager.py  test_contacts_store.py  test_email_parser.py  test_gmail_watcher.py  test_llm_client.py  test_messenger.py  test_pipeline.py  test_priority_scheduling.py  test_server_actions.py  test_title_generation.py  test_transcript_agent.py  test_transcription.py  test_travel_estimator.py
(+21 files in other folders)
